fix: heder padding for better line wrapping

--- a/frontend-apps/14/css/styles.css
+++ b/frontend-apps/14/css/styles.css
@@ -78,6 +78,7 @@ nav h1 {
 nav h1 a {
   color: #fff;
   font-size: 14pt;
+  padding: 20px;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
